[package]
name = "llambda"
version = "0.1.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
aws_lambda_events = "0.4"
netlify_lambda_http = "0.2"
http = "0.2.1"
url = "2.1.1"